--- a/ahlama/App.config
+++ b/ahlama/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <ahlama.Properties.Settings>
             <setting name="URL" serializeAs="String">
-                <value>http://35.214.194.83:11434/</value>
+                <value>http://localhost:11434/</value>
             </setting>
         </ahlama.Properties.Settings>
     </userSettings>
